[md][gcp] update google-cloud-shell.md
- update the steps to test spark on k8s using minikube